[workspace]
resolver = "2"
members = [
    "generate-random-vectors",
    "hnsw_redux",
    "improve",
    "index-vectors",
    "knn",
    "normalize",
    "search-collation",
    "test-recall",
    "time-load",
    "generate-vectors",
    "index-graph-field",
    "hnsw_redux-python"
]

[profile.release]
debug = true

[profile.assert]
inherits = "release"
debug-assertions = true
overflow-checks = true

[workspace.dependencies]
# TODO: For now, the brdatafusion/main and datafusion-python/main
#       git branches disagree on what pyo3 version to use.
#       Once they do, replace the "pyarrow" feature with
#       the "datafusion-python" dependency.
# datafusion = { git = "https://github.com/apache/datafusion.git" }
# datafusion-python = { git = "https://github.com/apache/datafusion-python.git" }
datafusion = { version = "44.0.0", features = ["pyarrow"] }
