[workspace]
resolver = "2"
members = [
    "generate-random-vectors",
    "generate-vectors",
    "vectorlink-hnsw",
    "vectorlink-hnsw-python",
    "improve",
    "index-graph-field",
    "index-vectors",
    "knn",
    "normalize",
    "search-collation",
    "test-recall",
    "time-load",
]

[profile.release]
debug = true

[profile.assert]
inherits = "release"
debug-assertions = true
overflow-checks = true

[workspace.dependencies]
datafusion = {version="44.0.0", features=["pyarrow"]}
