[workspace]
resolver = "2"
members = [
    "generate-random-vectors",
    "generate-vectors",
    "vectorlink-hnsw",
    "vectorlink-hnsw-python",
    "improve",
    "index-graph-field",
    "index-vectors",
    "knn",
    "normalize",
    "search-collation",
    "test-recall",
    "time-load",
]

[profile.release]
debug = true

[profile.assert]
inherits = "release"
debug-assertions = true
overflow-checks = true

[workspace.dependencies]
arrow = { version = "54.1.0", features = ["ffi", "pyarrow"] }
datafusion = { version = "45.0.0" }
