[package]
name = "generate-vectors"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
clap = { version = "4.5.19", features = ["derive"] }
csv = "1.3.0"
either = "1.13.0"
hnsw-redux = { version = "0.1.0", path = "../hnsw-redux" }
lazy_static = "1.5.0"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tiktoken-rs = "0.5.9"
tokio = { version = "1.40.0", features = ["full"] }
