[package]
name = "generate-vectors"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
argmin = "0.10.0"
argmin-math = { version = "0.4.0", features = ["nalgebra_latest"] }
argmin-observer-slog = "0.1.0"
argmin_testfunctions = "0.2.0"
byteorder = "1.5.0"
bytes = "1.7.2"
clap = { version = "4.5.19", features = ["derive"] }
csv = "1.3.0"
either = "1.13.0"
#gxhash = "3.4.1"
handlebars = "6.1.0"
hnsw-redux = { version = "0.1.0", path = "../hnsw-redux" }
lazy_static = "1.5.0"
#nalgebra = "0.33.0"
nalgebra = "0.32.3"
ndarray = "0.16.1"
rayon = "1.10.0"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
smartcore = "0.3.2"
thiserror = "1.0.64"
tiktoken-rs = "0.5.9"
tokio = { version = "1.40.0", features = ["full"] }
