[package]
name = "hnsw-redux"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bytemuck = "1.20.0"
datafusion = "43.0.0"
enum_dispatch = "0.3.13"
find_peaks = "0.1.5"
futures = "0.3.31"
itertools = "0.13.0"
lazy_static = "1.5.0"
libc = "0.2.159"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
unroll = "0.1.5"
