[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]

[project]
name = "hnsw_redux"
description = "HNSW redux bindings"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "datafusion>=43.1.0",
]
