[package]
name = "vectorlink-hnsw-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for vectorlink-hnsw"

[dependencies]
arrow = { workspace = true }
datafusion = { workspace = true }
paste = "1.0.15"
rayon = "1.10.0"
tokio-stream = "0.1.17"
vectorlink-hnsw = { version = "0.1.0", path = "../vectorlink-hnsw" }

[dependencies.pyo3]
version = "0.23.3"
# "abi3-py38" tells pyo3 / maturin to build using the stable ABI with Python >= 3.8
features = ["abi3-py38", "experimental-async"]

[lib]
name = "vectorlink_hnsw"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]
